[project]
name = "kumocms-lambda-python"
version = "1.0.0"
description = "Kumo CMS Lambda Functions"
authors = [
    { name = "KumoCMS" }
]
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "ulid-py==1.1.0",
    "PyJWT==2.8.0",
    "requests>=2.31.0",
]

[tool.ruff]
line-length = 100
target-version = "py312" # Latest supported by Ruff for now, Python 3.14 is very new

[tool.ruff.lint.mccabe]
max-complexity = 21

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = "src/common:src/handlers/api:src/handlers/events"
exclude = ["test/unit/"]

[[tool.mypy.overrides]]
module = [
    "boto3.*",
    "botocore.*",
    "ulid.*",
    "moto.*",
    "pytest.*",
    "decimal.*",
    "jwt.*",
]
ignore_missing_imports = true
